--- a/styles/style.css
+++ b/styles/style.css
@@ -214,6 +214,7 @@ button {
 
 .card-link {
   text-decoration: none; 
+
 }
 
 .card {
@@ -335,7 +336,8 @@ button {
 footer {
   padding-top: 180px;
   display: grid;
-  grid-template-columns: repeat(3,1fr); 
+  grid-template-columns: 
+  repeat(3,1fr); 
   justify-items: center;
 }
 
